--- a/index.html
+++ b/index.html
@@ -29,20 +29,7 @@
 
 <!-- Page content -->
 <div class="w3-content w3-padding" style="max-width:1564px">
-
-  <!-- Project Section -->
-  <div class="w3-container w3-padding-32" id="projects">
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Projects</h3>
-  </div>
-
-  <div class="w3-row-padding">
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Summer House</div>
-        <img src="/w3images/house5.jpg" alt="House" style="width:100%">
-      </div>
-    </div>
-  </div>
+  
 
   <!-- About Section -->
   <div class="w3-container w3-padding-32" id="about">
@@ -50,6 +37,31 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint
       occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
       laboris nisi ut aliquip ex ea commodo consequat.
+    </p>
+  </div>
+  
+  
+  <!-- Research Section -->
+  <div class="w3-container w3-padding-32" id="research">
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Research</h3>
+    <p>I do applied mathematics and climate physics research, from oceanography to atmospheric science to ice cores.
+    </p>
+  </div>
+  
+  
+  <!-- Music Section -->
+  <div class="w3-container w3-padding-32" id="music">
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Music</h3>
+    <p>I play guitar and cello, and I compose & record my own music.
+    </p>
+  </div>
+  
+  
+  
+  <!-- Activism Section -->
+  <div class="w3-container w3-padding-32" id="activism">
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Activism</h3>
+    <p>I have been active in climate justice, abolitionist, and anti-Zionist organizing in the past, and hope to get back into that work in the near future.
     </p>
   </div>
   
