--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <!-- Header -->
 <header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
-  <iframe src="https://cdn.dribbble.com/users/3658786/screenshots/15044136/media/20e5d07fc46a102a86bffc6b574ae068.gif" scrolling="no" frameBorder="0" alt="Lorenz Attractor" allowFullScreen="true" width="1500" height="800"></iframe>
+  <iframe src="https://www.dwitter.net/d/21530" scrolling="no" frameBorder="0" alt="Lorenz Attractor" allowFullScreen="true" width="1500" height="800"></iframe>
   <div class="w3-display-middle w3-margin-top w3-center">
     <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>Nash</b></span> <span class="w3-hide-small w3-text-light-grey">Keyes</span></h1>
   </div>
