--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <!-- Header -->
 <header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
-  <iframe src="https://dwitter.net/e/21530" frameBorder="0" alt="Lorenz Attractor" scrolling="no" allowFullScreen="true" width="1500" height="850"></iframe>
+  <iframe src="https://dwitter.net/e/21530" frameBorder="0" alt="Lorenz Attractor" allowFullScreen="true" width="1500" height="850"></iframe>
   <div class="w3-display-middle w3-margin-top w3-center">
     <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>Nash</b></span> <span class="w3-hide-small w3-text-light-grey">Keyes</span></h1>
   </div>
