--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
 
 <!-- Header -->
 <header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
-  <iframe src="https://dwitter.net/e/21530" frameBorder="0" alt="Lorenz Attractor" allowFullScreen="true" width="1500" height="850"></iframe>
   <div class="w3-display-middle w3-margin-top w3-center">
     <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>Nash</b></span> <span class="w3-hide-small w3-text-light-grey">Keyes</span></h1>
   </div>
@@ -34,9 +33,16 @@
   <!-- About Section -->
   <div class="w3-container w3-padding-32" id="about">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">About</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint
-      occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-      laboris nisi ut aliquip ex ea commodo consequat.
+    <p>I'm Nash Keyes (they/he), a climate scientist & applied mathematician currently based in New Haven, CT. I am working as a postgraduate associate with Dr. John Wettlaufer in the Yale Department of Earth & Planetary Sciences, researching colored noise behavior and stochastic modeling in paleoclimate glacial cycle data from the EPICA ice core. 
+    </p>
+    <p>
+I graduated from Yale University in 2021 with a B.A in Applied Mathematics in the Earth & Planetary Sciences track. During college, I interned in the Earth Sciences division at NASA GSFC and worked on Arctic Ocean data analysis with Dr. Mary-Louise Timmermans (Yale EPS) and Dr. Isabela Le Bras (woods Hole Oceanographic Institution). I was a founding member of the Applied Mathematics DSAC (Departmental Student Advisory Committee); was involved in climate justice activism with the Endowment Justice Coalition & in anti-Zionist organizing with Yale Jews for Palestine; and worked at the LGBTQ Office as a student staffer at and as co-president of Trans@Yale (the undergraduate organization for transgender & nonbinary students).
+    </p>
+    <p>
+In the long term, I hope to do climate science work, either on the mathematical side of complex systems & fluid dynamics, or on the infrastructural side of urban design, climate adaptation, and environmental justice. I also hope to get re-involved in community organizing for queer/trans & racial/economic & climate justice issues, and to eventually release some guitar, cello, and/or electronic music.    
+    </p>
+    <p>
+      In New Haven, I'm currently involved in various community groups in addition to my research job at Yale. I'm a bike maintenance volunteer at the Bradley Street Bike Cooperative, and am on the co-op's Volunteer Advisory Board and in the Values working group. I'm also a regular at MakeHaven, New Haven's incredible makerspace, where I am working on building an electric guitar. I am part of Mending Minyan, a local congregation of leftist, anti-Zionist, and radically inclusive Jews & friends of Jews. I can also be found regularly in the music scene, attending music concerts and other performances at local venues like Never Ending Books / Volume II.
     </p>
   </div>
   
@@ -44,7 +50,7 @@
   <!-- Research Section -->
   <div class="w3-container w3-padding-32" id="research">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Research</h3>
-    <p>I do applied mathematics and climate physics research, from oceanography to atmospheric science to ice cores.
+    <p>
     </p>
   </div>
   
@@ -61,15 +67,15 @@
   <!-- Activism Section -->
   <div class="w3-container w3-padding-32" id="activism">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Activism</h3>
-    <p>I have been active in climate justice, abolitionist, and anti-Zionist organizing in the past, and hope to get back into that work in the near future.
-    </p>
+    
   </div>
   
   
   <!-- Contact Section -->
   <div class="w3-container w3-padding-32" id="contact">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Contact</h3>
-    <p>ndbkeyes@gmail.com</p>
+    <p><a href="ndbkeyes@gmail.com">ndbkeyes@gmail.com</a></p>
+    <p><a href="https://www.linkedin.com/in/nash-keyes/">linkedin.com/in/nash-keyes/</a></p>
   </div>
 
 
