--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
 <title>Nash Keyes</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="/css/w3template.css">
 <body>
 
 <!-- Navbar (sit on top) -->
