--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
   <img class="w3-image" src="https://www.dropbox.com/scl/fi/86x7nd1lt30r11nsbighc/Photo-Jul-19-2023-9-59-28-AM.jpg?rlkey=x5ehlyi7ywm8fkz8qhzmcszos&dl=0" alt="Architecture" width="1500" height="800">
   <div class="w3-display-middle w3-margin-top w3-center">
-    <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>BR</b></span> <span class="w3-hide-small w3-text-light-grey">Nash Keyes</span></h1>
+    <h1 class="w3-xxlarge w3-text-white"><span class="w3-hide-small w3-text-light-grey">Nash Keyes</span></h1>
   </div>
 </header>
 
