--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-white w3-wide w3-padding w3-card">
-    <a href="#home" class="w3-bar-item w3-button"><b>BR</b> Architects</a>
+    <a href="#home" class="w3-bar-item w3-button"><b>Nash</b> Keyes</a>
     <!-- Float links to the right. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
-      <a href="#climate" class="w3-bar-item w3-button">Climate Work</a>
+      <a href="#climate" class="w3-bar-item w3-button">Climate</a>
+      <a href="#organizing" class="w3-bar-item w3-button">Community</a>
       <a href="#craft" class="w3-bar-item w3-button">Craft</a>
-      <a href="#organizing" class="w3-bar-item w3-button">Organizing</a>
       <a href="#about" class="w3-bar-item w3-button">About</a>
       <a href="#contact" class="w3-bar-item w3-button">Contact</a>
     </div>
