Changed image url

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <!-- Header -->
 <header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
-  <img class="w3-image" src="https://www.dropbox.com/scl/fi/86x7nd1lt30r11nsbighc/Photo-Jul-19-2023-9-59-28-AM.jpg?rlkey=x5ehlyi7ywm8fkz8qhzmcszos&dl=0" alt="Architecture" width="1500" height="800">
+  <img class="w3-image" src="https://previews.dropbox.com/p/thumb/ACSpzcnKjjMR7phApHHEklJXeeIQg3L1uV-YUxCQgq56Yo1lfyoks_gal4KfC5Em2TkzlR4AR5Bl9hWnLNahm_H7pCy7unkpq6q77vIPpKMMeLCkKd1BpwwHK-67LxtVQQM6SC2Ok4-oj4K8SAAPWytKvLvvduxFjj-ix1zA-UG4OsrVV1UQni7Xj1a45qni18yYnrV33ySjAagpZ938I2GJzwAXOwAN8I31M34Yhhu72_qLeFJADzI0GYQVUqRMqcFDEA1vMIY_ugfUvUrfguhDUXHo7IHFqBZtpZV14jaDYtztfIAuQqzMtnZUhiG34G0q4iJsdIrhwo8rmf4Ym8eo6B8pUsl2Y15wJU0SvR_ebFOI9ijPbmshXTKUZ6GncbSzEkHcSXVYdQ4OUyFPULMG/p.jpeg" alt="Architecture" width="1500" height="800">
   <div class="w3-display-middle w3-margin-top w3-center">
     <h1 class="w3-xxlarge w3-text-white"><span class="w3-hide-small w3-text-light-grey">Nash Keyes</span></h1>
   </div>
