Tried resizing header and added project sections

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <!-- Header -->
 <header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
-  <img class="w3-image" src="https://previews.dropbox.com/p/thumb/ACSpzcnKjjMR7phApHHEklJXeeIQg3L1uV-YUxCQgq56Yo1lfyoks_gal4KfC5Em2TkzlR4AR5Bl9hWnLNahm_H7pCy7unkpq6q77vIPpKMMeLCkKd1BpwwHK-67LxtVQQM6SC2Ok4-oj4K8SAAPWytKvLvvduxFjj-ix1zA-UG4OsrVV1UQni7Xj1a45qni18yYnrV33ySjAagpZ938I2GJzwAXOwAN8I31M34Yhhu72_qLeFJADzI0GYQVUqRMqcFDEA1vMIY_ugfUvUrfguhDUXHo7IHFqBZtpZV14jaDYtztfIAuQqzMtnZUhiG34G0q4iJsdIrhwo8rmf4Ym8eo6B8pUsl2Y15wJU0SvR_ebFOI9ijPbmshXTKUZ6GncbSzEkHcSXVYdQ4OUyFPULMG/p.jpeg" alt="Architecture" width="1500" height="800">
+  <img class="w3-image" src="https://previews.dropbox.com/p/thumb/ACSpzcnKjjMR7phApHHEklJXeeIQg3L1uV-YUxCQgq56Yo1lfyoks_gal4KfC5Em2TkzlR4AR5Bl9hWnLNahm_H7pCy7unkpq6q77vIPpKMMeLCkKd1BpwwHK-67LxtVQQM6SC2Ok4-oj4K8SAAPWytKvLvvduxFjj-ix1zA-UG4OsrVV1UQni7Xj1a45qni18yYnrV33ySjAagpZ938I2GJzwAXOwAN8I31M34Yhhu72_qLeFJADzI0GYQVUqRMqcFDEA1vMIY_ugfUvUrfguhDUXHo7IHFqBZtpZV14jaDYtztfIAuQqzMtnZUhiG34G0q4iJsdIrhwo8rmf4Ym8eo6B8pUsl2Y15wJU0SvR_ebFOI9ijPbmshXTKUZ6GncbSzEkHcSXVYdQ4OUyFPULMG/p.jpeg" alt="HeaderImage" width="1500" height="500">
   <div class="w3-display-middle w3-margin-top w3-center">
     <h1 class="w3-xxlarge w3-text-white"><span class="w3-hide-small w3-text-light-grey">Nash Keyes</span></h1>
   </div>
@@ -34,80 +34,99 @@
 <!-- Page content -->
 <div class="w3-content w3-padding" style="max-width:1564px">
 
+
+    <!-- About Section -->
+    <div class="w3-container w3-padding-32" id="about">
+      <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">About</h3>
+      <p>I'm Nash Keyes (they/them), an early-career professional in climate adaptation. I am passionate about the intersections of urban planning, mapping, and climate justice, and I use my 
+      </p>
+    </div>
+
   <!-- Project Section -->
   <div class="w3-container w3-padding-32" id="projects">
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Projects</h3>
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Climate</h3>
   </div>
 
   <div class="w3-row-padding">
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Summer House</div>
+        <div class="w3-display-topleft w3-black w3-padding">EPA stuff</div>
         <img src="/w3images/house5.jpg" alt="House" style="width:100%">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Brick House</div>
+        <div class="w3-display-topleft w3-black w3-padding">DEVELOP</div>
         <img src="/w3images/house2.jpg" alt="House" style="width:100%">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Renovated</div>
+        <div class="w3-display-topleft w3-black w3-padding">uhhh Yale paper?</div>
         <img src="/w3images/house3.jpg" alt="House" style="width:100%">
       </div>
     </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Barn House</div>
-        <img src="/w3images/house4.jpg" alt="House" style="width:100%">
-      </div>
-    </div>
+  </div>
+
+
+
+  <div class="w3-container w3-padding-32" id="projects">
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Craft</h3>
   </div>
 
   <div class="w3-row-padding">
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Summer House</div>
-        <img src="/w3images/house2.jpg" alt="House" style="width:99%">
+        <div class="w3-display-topleft w3-black w3-padding">Woodworking</div>
+        <img src="/w3images/house5.jpg" alt="House" style="width:100%">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Brick House</div>
-        <img src="/w3images/house5.jpg" alt="House" style="width:99%">
+        <div class="w3-display-topleft w3-black w3-padding">Printmaking</div>
+        <img src="/w3images/house2.jpg" alt="House" style="width:100%">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Renovated</div>
-        <img src="/w3images/house4.jpg" alt="House" style="width:99%">
-      </div>
-    </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Barn House</div>
-        <img src="/w3images/house3.jpg" alt="House" style="width:99%">
+        <div class="w3-display-topleft w3-black w3-padding">Writing</div>
+        <img src="/w3images/house3.jpg" alt="House" style="width:100%">
       </div>
     </div>
   </div>
 
-  <!-- About Section -->
-  <div class="w3-container w3-padding-32" id="about">
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">About</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint
-      occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-      laboris nisi ut aliquip ex ea commodo consequat.
-    </p>
+
+
+  <div class="w3-container w3-padding-32" id="projects">
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Community</h3>
+  </div>
+
+  <div class="w3-row-padding">
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding">Anti-Zionism</div>
+        <img src="/w3images/house5.jpg" alt="House" style="width:100%">
+      </div>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding">Mutual Aid</div>
+        <img src="/w3images/house2.jpg" alt="House" style="width:100%">
+      </div>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding">Queer</div>
+        <img src="/w3images/house3.jpg" alt="House" style="width:100%">
+      </div>
+    </div>
   </div>
 
 
 
   <!-- Contact Section -->
   <div class="w3-container w3-padding-32" id="contact">
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Contact</h3>
-    <p>Lets get in touch and talk about your next project.</p>
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Contact Me</h3>
     <form action="/action_page.php" target="_blank">
       <input class="w3-input w3-border" type="text" placeholder="Name" required name="Name">
       <input class="w3-input w3-section w3-border" type="text" placeholder="Email" required name="Email">
@@ -119,10 +138,6 @@
     </form>
   </div>
   
-<!-- Image of location/map -->
-<div class="w3-container">
-  <img src="/w3images/map.jpg" class="w3-image" style="width:100%">
-</div>
 
 <!-- End page content -->
 </div>
