Updated image URL

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <!-- Header -->
 <header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
-  <img class="w3-image" src="https://previews.dropbox.com/p/thumb/ACSpzcnKjjMR7phApHHEklJXeeIQg3L1uV-YUxCQgq56Yo1lfyoks_gal4KfC5Em2TkzlR4AR5Bl9hWnLNahm_H7pCy7unkpq6q77vIPpKMMeLCkKd1BpwwHK-67LxtVQQM6SC2Ok4-oj4K8SAAPWytKvLvvduxFjj-ix1zA-UG4OsrVV1UQni7Xj1a45qni18yYnrV33ySjAagpZ938I2GJzwAXOwAN8I31M34Yhhu72_qLeFJADzI0GYQVUqRMqcFDEA1vMIY_ugfUvUrfguhDUXHo7IHFqBZtpZV14jaDYtztfIAuQqzMtnZUhiG34G0q4iJsdIrhwo8rmf4Ym8eo6B8pUsl2Y15wJU0SvR_ebFOI9ijPbmshXTKUZ6GncbSzEkHcSXVYdQ4OUyFPULMG/p.jpeg" alt="HeaderImage" width="1500" height="500">
+  <img class="w3-image" src="https://previews.dropbox.com/p/thumb/ACS0dK1kGjb8u726DxFBR_cGRMVSR0v6CPD2VoFouRU_NWLoGozrYHLn0kaDfH0LCZTeKSyBcNIn8Oz8rk-wJrDNBSyAIjEtrswjRcRbufC_B_LIJ_RKcwYq7AEGGuZ-qDNfodQ2jePdJjL2meZXs2_Q6zlOPiDmlXqGrAGpc6-vorLgQbLn9Z9GxxTuiI-L5sRwGTNpAWRnjeI45ww0k9M40SB6G-HL46a01rh7Zq6OaeXc1C_hkWaS5KsBsvTwLA763u32EJTKdFa_PH8169wZD9lFwyLhX0_SYFsFjBq4NBOiX6H6KTtOI56HVKivaX_3bzK67J27vfMxSe-mqUbA/p.jpeg" alt="HeaderImage" width="1500">
   <div class="w3-display-middle w3-margin-top w3-center">
     <h1 class="w3-xxlarge w3-text-white"><span class="w3-hide-small w3-text-light-grey">Nash Keyes</span></h1>
   </div>
