--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>W3.CSS Template</title>
+<title>Nash Keyes</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -37,7 +37,7 @@
 
     <!-- About Section -->
     <div class="w3-container w3-padding-32" id="about">
-      <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">About</h3>
+      <h3 class="w3-border-bottom w3-border-light-grey">About</h3>
       <p>I'm Nash Keyes (they/them), an early-career professional in climate adaptation. I am passionate about the intersections of urban planning, mapping, and climate justice, and I use my 
       </p>
     </div>
