Add header photo

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
 <!-- Header -->
 <header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
-  <img class="w3-image" src="https://previews.dropbox.com/p/thumb/ACS0dK1kGjb8u726DxFBR_cGRMVSR0v6CPD2VoFouRU_NWLoGozrYHLn0kaDfH0LCZTeKSyBcNIn8Oz8rk-wJrDNBSyAIjEtrswjRcRbufC_B_LIJ_RKcwYq7AEGGuZ-qDNfodQ2jePdJjL2meZXs2_Q6zlOPiDmlXqGrAGpc6-vorLgQbLn9Z9GxxTuiI-L5sRwGTNpAWRnjeI45ww0k9M40SB6G-HL46a01rh7Zq6OaeXc1C_hkWaS5KsBsvTwLA763u32EJTKdFa_PH8169wZD9lFwyLhX0_SYFsFjBq4NBOiX6H6KTtOI56HVKivaX_3bzK67J27vfMxSe-mqUbA/p.jpeg" alt="HeaderImage" width="1500">
-  <div class="w3-display-middle w3-margin-top w3-center">
+  <img class="w3-image" src="/assets/site_header_photo.jpg">
+    <div class="w3-display-middle w3-margin-top w3-center">
     <h1 class="w3-xxlarge w3-text-white"><span class="w3-hide-small w3-text-light-grey">Nash Keyes</span></h1>
   </div>
 </header>
