--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
   <img class="w3-image" src="/assets/site_header_photo.jpg">
     <div class="w3-display-middle w3-margin-top w3-center">
-    <h1 class="w3-xxlarge w3-text-white"><span class="w3-hide-small w3-text-light-grey">Nash Keyes</span></h1>
+    <h1 class="w3-xxxlarge w3-text-white"><span class="w3-hide-small w3-text-light-grey">Nash Keyes</span></h1>
   </div>
 </header>
 
