--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-white w3-wide w3-padding w3-card">
-    <a href="#home" class="w3-bar-item w3-button"><b>Nash</b> Keyes</a>
+    <a href="#home" class="w3-bar-item w3-button"><b>home</b></a>
     <!-- Float links to the right. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
-      <a href="#climate" class="w3-bar-item w3-button">Climate</a>
-      <a href="#organizing" class="w3-bar-item w3-button">Community</a>
-      <a href="#craft" class="w3-bar-item w3-button">Craft</a>
+      <a href="#climate" class="w3-bar-item w3-button">climate</a>
+      <a href="#organizing" class="w3-bar-item w3-button">community</a>
+      <a href="#craft" class="w3-bar-item w3-button">craft</a>
       <a href="#about" class="w3-bar-item w3-button">About</a>
       <a href="#contact" class="w3-bar-item w3-button">Contact</a>
     </div>
@@ -26,9 +26,9 @@
 <!-- Header -->
 <header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
   <img class="w3-image" src="/assets/site_header_photo.jpg">
-    <div class="w3-display-middle w3-margin-top w3-center">
-    <h1 class="w3-xxxlarge w3-text-white"><span class="w3-hide-small w3-text-light-grey">Nash Keyes</span></h1>
-  </div>
+    <div class="w3-display-top w3-margin-top w3-left">
+      <h1 class="w3-xxxlarge w3-text-white"><span class="w3-hide-small w3-text-light-grey"><b>Nash</b> Keyes</span></h1>
+    </div>
 </header>
 
 <!-- Page content -->
