--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 <header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
   <img class="w3-image" src="/assets/site_header_photo.jpg">
     <div class="w3-display-top w3-margin-top w3-left">
-      <h1 class="w3-xxxlarge w3-text-white"><span class="w3-hide-small w3-text-light-grey"><b>Nash</b> Keyes</span></h1>
-    </div>
+    <h1 class="w3-xxxlarge w3-text-white"><span class="w3-hide-small w3-text-light-grey"><b>Nash</b> Keyes</span></h1>
+  </div>
 </header>
 
 <!-- Page content -->
@@ -38,8 +38,7 @@
     <!-- About Section -->
     <div class="w3-container w3-padding-32" id="about">
       <h3 class="w3-border-bottom w3-border-light-grey">About</h3>
-      <p>I'm Nash Keyes (they/them), an early-career professional in climate adaptation. I am passionate about the intersections of urban planning, mapping, and climate justice, and I use my 
-      </p>
+      <embed src="/assets/bio.txt">
     </div>
 
   <!-- Project Section -->
