--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <!-- About Section -->
     <div class="w3-container w3-padding-32" id="about">
       <h3 class="w3-border-bottom w3-border-light-grey">About</h3>
-      <embed src="/assets/bio.txt">
+      <div><p><?php include("/assets/bio.txt"); ?></p></div>
     </div>
 
   <!-- Project Section -->
