--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
     <a href="#home" class="w3-bar-item w3-button"><b>home</b></a>
     <!-- Float links to the right. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
+      <a href="#about" class="w3-bar-item w3-button">about</a>
       <a href="#climate" class="w3-bar-item w3-button">climate</a>
       <a href="#organizing" class="w3-bar-item w3-button">community</a>
       <a href="#craft" class="w3-bar-item w3-button">craft</a>
-      <a href="#about" class="w3-bar-item w3-button">About</a>
-      <a href="#contact" class="w3-bar-item w3-button">Contact</a>
     </div>
   </div>
 </div>
@@ -122,21 +121,6 @@
     </div>
   </div>
 
-
-
-  <!-- Contact Section -->
-  <div class="w3-container w3-padding-32" id="contact">
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Contact Me</h3>
-    <form action="/action_page.php" target="_blank">
-      <input class="w3-input w3-border" type="text" placeholder="Name" required name="Name">
-      <input class="w3-input w3-section w3-border" type="text" placeholder="Email" required name="Email">
-      <input class="w3-input w3-section w3-border" type="text" placeholder="Subject" required name="Subject">
-      <input class="w3-input w3-section w3-border" type="text" placeholder="Comment" required name="Comment">
-      <button class="w3-button w3-black w3-section" type="submit">
-        <i class="fa fa-paper-plane"></i> SEND MESSAGE
-      </button>
-    </form>
-  </div>
   
 
 <!-- End page content -->
