--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <!-- About Section -->
     <div class="w3-container w3-padding-32" id="about">
-      <h3 class="w3-border-bottom w3-border-light-grey">About</h3>
+      <h3 class="w3-border-bottom w3-border-light-grey">About1</h3>
       <div><p id="bio"></p></div>
     </div>
 
