--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="w3-right w3-hide-small">
       <a href="#about" class="w3-bar-item w3-button">about</a>
       <a href="#climate" class="w3-bar-item w3-button">climate</a>
-      <a href="#organizing" class="w3-bar-item w3-button">community</a>
+      <a href="#community" class="w3-bar-item w3-button">community</a>
       <a href="#craft" class="w3-bar-item w3-button">craft</a>
     </div>
   </div>
@@ -37,8 +37,8 @@
 
     <!-- About Section -->
     <div class="w3-container w3-padding-32" id="about">
-      <h3 class="w3-border-bottom w3-border-light-grey">About1</h3>
-      <div><p id="bio"></p></div>
+      <h3 class="w3-border-bottom w3-border-light-grey">About2</h3>
+      <div><p id="bio" style="color:black;"></p></div>
     </div>
 
   <!-- Project Section -->
@@ -50,19 +50,16 @@
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">EPA stuff</div>
-        <img src="/w3images/house5.jpg" alt="House" style="width:100%">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">DEVELOP</div>
-        <img src="/w3images/house2.jpg" alt="House" style="width:100%">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">uhhh Yale paper?</div>
-        <img src="/w3images/house3.jpg" alt="House" style="width:100%">
       </div>
     </div>
   </div>
@@ -77,19 +74,16 @@
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">Woodworking</div>
-        <img src="/w3images/house5.jpg" alt="House" style="width:100%">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">Printmaking</div>
-        <img src="/w3images/house2.jpg" alt="House" style="width:100%">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">Writing</div>
-        <img src="/w3images/house3.jpg" alt="House" style="width:100%">
       </div>
     </div>
   </div>
@@ -104,7 +98,6 @@
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">Anti-Zionism</div>
-        <img src="/w3images/house5.jpg" alt="House" style="width:100%">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
