--- a/index.html
+++ b/index.html
@@ -5,7 +5,16 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<script src="script.js"></script>
+<script>
+  var file = new XMLHttpRequest();
+  file.open("GET", "/assets/bio.txt", true);
+  file.onreadystatechange = function() {
+    if (file.readyState === 4) && if (file.status === 200) {  // Makes sure the document is ready to parse and is found
+        text = file.responseText;
+        document.getElementById("bio").innerHTML = text;
+    }
+  }
+</script>
 </head>
 <body>
 
