--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<script src="script.js"></script>
+<script>
+  document.getElementById("bio").innerHTML = "test"
+</script>
 <noscript>error</noscript>
 </head>
 <body>
