--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <!-- About Section -->
     <div class="w3-container w3-padding-32" id="about">
       <h3 class="w3-border-bottom w3-border-light-grey">About2</h3>
-      <div><p id="bio" style="color:black;"></p></div>
+      <div><p id="bio">x</p></div>
     </div>
 
   <!-- Project Section -->
