--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <script type="text/javascript">
-  document.getElementById("bio").innerHTML = "test";
+  alert("test");
 </script>
 <noscript>error</noscript>
 </head>
@@ -40,7 +40,7 @@
 
     <!-- About Section -->
     <div class="w3-container w3-padding-32" id="about">
-      <h3 class="w3-border-bottom w3-border-light-grey">About2</h3>
+      <h3 class="w3-border-bottom w3-border-light-grey">About</h3>
       <div><p id="bio">x</p></div>
     </div>
 
