--- a/index.html
+++ b/index.html
@@ -5,10 +5,6 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<script type="text/javascript">
-  alert("test");
-</script>
-<noscript>error</noscript>
 </head>
 <body>
 
@@ -127,6 +123,11 @@
 <footer class="w3-center w3-black w3-padding-16">
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
 </footer>
+
+
+<script type="text/javascript">
+  document.getElementById("bio").innerHTML = "BIO TEST";
+</script>
 
 </body>
 </html>
