--- a/index.html
+++ b/index.html
@@ -126,7 +126,13 @@
 
 
 <script type="text/javascript">
-  document.getElementById("bio").innerHTML = "BIO TEST";
+  var txtFile = new XMLHttpRequest();
+  txtFile.open("GET", "/assets/bio.txt", true);
+  txtFile.onreadystatechange = function() {
+    if (txtFile.readyState === 4 && txtFile.status == 200) {
+       allText = txtFile.responseText;
+    }
+  document.getElementById('bio').innerHTML = allText;
 </script>
 
 </body>
