--- a/index.html
+++ b/index.html
@@ -131,8 +131,12 @@
   txtFile.open("GET", "/assets/bio.txt", true);
   txtFile.onreadystatechange = function() {
     if (txtFile.readyState === 4 && txtFile.status == 200) {
-       allText = txtFile.responseText;
+      allText = txtFile.responseText;
+    } else {
+      allText = "error!";
     }
+  }
+  alert(allText);
   document.getElementById("bio").innerHTML = allText;
 </script>
 
