--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
 
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script>
-  $().ready(function() {
-    $("#bio").html("Text added by jQuery code.");
-  });
+  $.get('/assets/bio.txt', function(data) {
+   alert(data)
+  }, 'text');
 </script>
 
 </body>
