--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script>
   $.get('/assets/bio.txt', function(data) {
-   alert(data)
+   document.getElementById("bio").innerHTML = data;
   }, 'text');
 </script>
 
