--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <a href="#home" class="w3-bar-item w3-button"><b>home</b></a>
     <!-- Float links to the right. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
-      <a href="#about" class="w3-bar-item w3-button">about</a>
+      <a href="#about" class="w3-bar-item w3-button" style="font-size:50px;">about</a>
       <a href="#climate" class="w3-bar-item w3-button">climate</a>
       <a href="#community" class="w3-bar-item w3-button">community</a>
       <a href="#craft" class="w3-bar-item w3-button">craft</a>
