--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-white w3-wide w3-padding w3-card">
-    <a href="#home" class="w3-bar-item w3-button" style="font-size:20px;"><b>home</b></a>
+    <a href="#home" class="w3-bar-item w3-button" style="font-size:20px;"><b>nash</b> keyes</a>
     <!-- Float links to the right. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
-      <a href="#about" class="w3-bar-item w3-button" style="font-size:20px;">about</a>
       <a href="#climate" class="w3-bar-item w3-button" style="font-size:20px;">climate</a>
       <a href="#community" class="w3-bar-item w3-button" style="font-size:20px;">community</a>
       <a href="#craft" class="w3-bar-item w3-button" style="font-size:20px;">craft</a>
+      <a href="#contact" class="w3-bar-item w3-button" style="font-size:20px;">contact</a>
     </div>
   </div>
 </div>
@@ -37,7 +37,7 @@
     <!-- About Section -->
     <div class="w3-container w3-padding-32" id="about">
       <h3 class="w3-border-bottom w3-border-light-grey">About</h3>
-      <div><p id="bio">x</p></div>
+      <div><p id="bio"></p></div>
     </div>
 
   <!-- Project Section -->
